[package]
name = "writebuf-core"
version = "0.1.0"
edition = "2021"
description = "A writable buffer that implements fmt::Write or ufmt::uWrite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"
ufmt = { version = "0.2", optional = true }

[features]
default = ["ufmt"]
ufmt = ["heapless/ufmt-impl", "heapless/ufmt-write", "dep:ufmt"]